--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    
+    "pages/trifle_one/trifle_one",
     "pages/trifle/trifle",
     "pages/index/index",
     "pages/userConsole/userConsole",
@@ -13,8 +15,7 @@
     "pages/openapi/callback/callback",
     "pages/openapi/cloudid/cloudid",
     "pages/im/im",
-    "pages/im/room/room",
-    "pages/trifle_one/trifle_one"
+    "pages/im/room/room"
   ],
   "window": {
     "backgroundColor": "#ffaaa5",
