--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    
     "pages/trifle_one/trifle_one",
+    "pages/trifle_editrecall/trifle_editrecall",
     "pages/trifle/trifle",
     "pages/index/index",
     "pages/userConsole/userConsole",
